change list-container to use flex to stop inner margins growing on smaller screens

--- a/src/styles/CategoryDropdown.css
+++ b/src/styles/CategoryDropdown.css
@@ -1,6 +1,6 @@
 .dropdown {
   margin: 20px;
-  margin-bottom: 0px;
+  margin-bottom: 20px;
   padding: 6px;
   background-color: white;
   border: lightgray;
